--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -19,7 +19,7 @@ services:
 
     app.product_paginator:
         class: AppBundle\Utils\Paginator
-        arguments: ['@doctrine.orm.entity_manager', '@request_stack', '@router']
+        arguments: ['@product_manager', '@doctrine.orm.entity_manager', '@request_stack', '@router']
 
     my_event.listener:
         class: AppBundle\EventListener\MyEventListener
@@ -29,3 +29,15 @@ services:
     app.crumbs_generator:
         class: AppBundle\Utils\CrumbsGenerator\CrumbsGenerator
         arguments: ['@router']
+
+    product_filtrator:
+        class: AppBundle\Utils\ProductsFiltrator
+        arguments: ['@request_stack', '@currency_manager']
+
+    product_manager:
+        class: AppBundle\Utils\ProductManager
+        arguments: ['@request_stack', '@doctrine.orm.entity_manager', '@currency_manager', '@filters_handler']
+
+    filters_handler:
+        class: AppBundle\Utils\Filters\FiltersHandler
+        arguments: ['@request_stack', '@doctrine.orm.entity_manager', '@router', '@form.factory']
