Сделал бренд товара отдельной сущностью и добавил возможность фильтрации по брендам. Добавил вывод товаров по брендам с другими фильтрами. Сделал систему классов для фильтров, повторяющую иерархию классов товаров, что позволяет легко добавлять и редактировать параметры фильтров и задавать свой набор фильтров для каждого класса товара (при выводе по категориям), результатов поиска и выводу по брендам. Другие мелкие правки.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,11 +28,7 @@ services:
 
     app.crumbs_generator:
         class: AppBundle\Utils\CrumbsGenerator\CrumbsGenerator
-        arguments: ['@router']
-
-    product_filtrator:
-        class: AppBundle\Utils\ProductsFiltrator
-        arguments: ['@request_stack', '@currency_manager']
+        arguments: ['@router', '@doctrine.orm.entity_manager']
 
     product_manager:
         class: AppBundle\Utils\ProductManager
@@ -40,4 +36,4 @@ services:
 
     filters_handler:
         class: AppBundle\Utils\Filters\FiltersHandler
-        arguments: ['@request_stack', '@doctrine.orm.entity_manager', '@router', '@form.factory']
+        arguments: ['@request_stack', '@doctrine.orm.entity_manager', '@router', '@form.factory', '@currency_manager']
