Installed the captcha bundle and added captcha to the registration form.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,9 +87,10 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+gregwar_captcha: ~
+
 
 liip_imagine:
-
     resolvers:
         default:
             web_path:
