--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "symfony/serializer": "^3.1",
         "symfony/property-access": "^3.1",
         "jms/serializer-bundle": "^1.1",
-        "twig/extensions": "^1.4"
+        "twig/extensions": "^1.4",
+        "gregwar/captcha-bundle": "^2.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0",
